<resources>
    <string name="app_name">TomatoClock</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="ruser">用户名</string>
    <string name="rname">姓名</string>
    <string name="rpassword">密码</string>
    <string name="rrpassword">再次输入密码</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="rregister">注册</string>
    <string name="returnlogin">返回登录界面</string>

    <string name="coin">金币商店</string>
    <string name="DDLList">DDL列表</string>
    <string name="report">简报</string>
    <string name="rankList">排行榜</string>


    <string name="reportAllFocusRecords">所有专注记录</string>
    <string name="byDay">按日</string>
    <string name="byWeek">按周</string>
    <string name="byMonth">按月</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_all_focus_records">所有专注记录</string>
</resources>
